# depheal

./: .gitignore  README.md  pyproject.toml
depwise/: __init__.py  checker.py  cli.py  reporter.py  scanner.py
