[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depheal"
version         = "0.1.1"
description     = "dependency health scanner — cross-language, offline-first, no account needed"
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "MIT"}
authors         = [{name = "Prince"}]
keywords        = ["dependencies", "security", "audit", "CVE", "devtools"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero external dependencies
# Everything uses Python stdlib only
dependencies = []

[project.scripts]
depwise = "depwise.cli:main"

[project.urls]
Homepage   = "https://github.com/prince0x/depwise"
Repository = "https://github.com/prince0x/depwise"
Issues     = "https://github.com/prince0x/depwise/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-dir]
"" = "."
